# edu-pico-c

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: update_firmware.h  wifi_connect.h
src/: CMakeLists.txt  main.c  update_firmware.c  wifi_connect.c
